(feat): adiciona criação de media ponderada de distribuição de frequencia por coluna
