# api/app/swagger/swagger.yaml
@@ -3882,3 +3882,202 @@ paths:
                           "Coluna 3": 42.0
                         }
                     }
+  /data-visualization/mean-frequency-distribution/{id}:
+    post:
+      tags:
+        - "Visualização de Dados"
+      summary: "Realiza o cálculo da média por classe na distribuição de frequência"
+      description: |
+        Calcula a média por classe na distribuição de frequência para um dataset específico. O usuário pode escolher entre usar o dataset original ou o dataset limpo (se disponível).
+        O cálculo é feito para as colunas (features) especificadas.
+      parameters:
+        - name: "id"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+          description: "ID da base de dados."
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - features
+                - use_clean_dataset
+              properties:
+                features:
+                  type: array
+                  items:
+                    type: string
+                  description: "Lista de colunas (features) para as quais a média por classe será calculada."
+                use_clean_dataset:
+                  type: boolean
+                  description: |
+                    Indica se o dataset limpo deve ser usado.
+                    - `true`: Usa o dataset limpo (se disponível).
+                    - `false`: Usa o dataset original.
+            examples:
+              success:
+                summary: Exemplo de requisição
+                value:
+                  features: [ "idade", "salario" ]
+                  use_clean_dataset: true
+      responses:
+        '200':
+          description: Cálculo de média por classe realizado com sucesso
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: "Mensagem de retorno da operação."
+                  success:
+                    type: boolean
+                    description: "Indica se a operação foi bem-sucedida."
+                  data:
+                    type: object
+                    additionalProperties:
+                      type: object
+                      properties:
+                        frequency_distribution_with_means:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              interval:
+                                type: string
+                                description: "Intervalo da classe."
+                              frequency:
+                                type: integer
+                                description: "Frequência da classe."
+                              class_mean:
+                                type: number
+                                description: "Média da classe."
+                        overall_mean:
+                          type: number
+                          description: "Média geral ponderada pelas frequências das classes."
+              examples:
+                success:
+                  summary: Exemplo de resposta
+                  description: "Cálculo de média por classe realizado com sucesso"
+                  value:
+                    message: "Distribuição de frequência média realizada com sucesso!"
+                    success: true
+                    data:
+                      idade:
+                        frequency_distribution_with_means:
+                          - interval: "20 - 30"
+                            frequency: 5
+                            class_mean: 25.0
+                          - interval: "31 - 40"
+                            frequency: 10
+                            class_mean: 35.5
+                        overall_mean: 32.0
+                      salario:
+                        frequency_distribution_with_means:
+                          - interval: "1000 - 2000"
+                            frequency: 8
+                            class_mean: 1500.0
+                          - interval: "2001 - 3000"
+                            frequency: 7
+                            class_mean: 2500.5
+                        overall_mean: 1964.71
+        '422':
+          description: Erros de validação.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+              examples:
+                validation_error_features:
+                  summary: Exemplo de resposta 1
+                  description: Erro retornado quando uma coluna fornecida não existe no dataset.
+                  value:
+                    message: "Dados inválidos!"
+                    success: false
+                    data:
+                      features: [ "Coluna não encontrada no dataset." ]
+        '404':
+          description: "Não encontrado."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+              examples:
+                not_found:
+                  summary: Exemplo de resposta
+                  description: Base de dados não encontrada; nenhum dado retornado.
+                  value:
+                    message: "Base de dados não encontrada!"
+                    success: false
+                    data: null
+                clean_dataset_not_found:
+                  summary: Exemplo de resposta 2
+                  description: Dataset limpo não encontrado.
+                  value:
+                    message: "Dataset limpo não encontrado!"
+                    success: false
+                    data: null
+        '401':
+          description: "Não autorizado."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+              examples:
+                unauthorized:
+                  summary: Exemplo de resposta
+                  description: Usuário não está autenticado.
+                  value:
+                    message: "Não autorizado!"
+                    success: false
+                    data: null
+        '500':
+          description: "Erro interno do servidor."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+              examples:
+                internal_server_error:
+                  summary: Exemplo de resposta
+                  description: Erro ao calcular a média por classe.
+                  value:
+                    message: "Erro ao gerar distribuição de frequência média!"
+                    success: false
+                    data: "Erro ao calcular média por classe: <detalhes do erro>"
+
+
+
